--- a/application/index/view/study/video_detail.html
+++ b/application/index/view/study/video_detail.html
@@ -32,7 +32,10 @@
 			<div><button class="common_btn">购买</button></div>
 			{/if}
 		</div>
-
+		
+		{if condition="$buyed eq 1"}
+		<div class="intor_word detail_word"><video src="{$info.videofile}" controls></video></div>
+		{/if}
 		<div class="intor_word detail_word">{$info.content}</div>
 
 		<!-- <h3 class="more_title">付款说明</h3>
@@ -58,7 +61,7 @@
 			data:{video_id:id},
 			success:function(data){
 				if(data.status == 1){
-					layer.msg('报名成功');
+					layer.msg('下单成功');
 				} else {
 					layer.msg(data.msg);
 				}
