--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -62,7 +62,7 @@
                 <div class="index_position index_flex">
                     <div class="index_l"><img src="{$knowledge[0]['thumbimage']}"></div>
                     <div class="index_r">
-                        <div><a class="index_content_title" href="#">{$knowledge[0]['title']}</a></div>
+                        <div><a class="index_content_title" href="{:url('index/study/knowledgedetail', array('id'=>$knowledge[0]['id']))}">{$knowledge[0]['title']}</a></div>
                         <div class="index_content_div index_small">
                             {$knowledge[0]['description']}
                         </div>
@@ -72,7 +72,7 @@
                 <ul class="index_content_ul">
                     {foreach name="knowledge" item="item" key="k"}
                     <?php if($k<1){continue;}?>
-                    <li><a class="over" href="#">{$item.title}</a> <span class="index_small">{:date('Y-m-d', $item.createtime)}</span></li>
+                    <li><a class="over" href="{:url('index/study/knowledgedetail', array('id'=>$item['id']))}">{$item.title}</a> <span class="index_small">{:date('Y-m-d', $item.createtime)}</span></li>
                     {/foreach}
 
                 </ul>
@@ -89,7 +89,7 @@
                 <div class="index_position index_flex">
                     <div class="index_l"><img src="{$project[0]['thumbimage']}"></div>
                     <div class="index_r">
-                        <div><a class="index_content_title" href="#">{$project[0]['title']}</a></div>
+                        <div><a class="index_content_title" href="{:url('index/project/detail', array('id'=>$project[0]['id']))}">{$project[0]['title']}</a></div>
                         <div class="index_content_div index_small">
                             {$project[0]['description']}
                         </div>
@@ -99,7 +99,7 @@
                 <ul class="index_content_ul">
                     {foreach name="project" item="item" key="k"}
                     <?php if($k<1){continue;}?>
-                    <li><a class="over" href="#">{$item.title}</a> <span class="index_small">{:date('Y-m-d', $item.createtime)}</span></li>
+                    <li><a class="over" href="{:url('index/project/detail', array('id'=>$item['id']))}">{$item.title}</a> <span class="index_small">{:date('Y-m-d', $item.createtime)}</span></li>
                     {/foreach}
 
                 </ul>
@@ -130,7 +130,7 @@
                 <div class="index_position index_flex">
                     <div class="index_l"><img src="{$exhibition[0]['thumbimage']}"></div>
                     <div class="index_r">
-                        <div><a class="index_content_title" href="#">{$exhibition[0]['title']}</a></div>
+                        <div><a class="index_content_title" href="{:url('index/resource/exhibition', array('id'=>$exhibition[0]['id']))}">{$exhibition[0]['title']}</a></div>
                         <div class="index_content_div index_small">
                             {$exhibition[0]['description']}
                         </div>
@@ -140,7 +140,7 @@
                 <ul class="index_content_ul">
                     {foreach name="exhibition" item="item" key="k"}
                     <?php if($k<1){continue;}?>
-                    <li><a class="over" href="#">{$item.title}</a> <span class="index_small">{:date('Y-m-d', $item.createtime)}</span></li>
+                    <li><a class="over" href="{:url('index/resource/exhibitiondetail', array('id'=>$item.id))}">{$item.title}</a> <span class="index_small">{:date('Y-m-d', $item.createtime)}</span></li>
                     {/foreach}
 
                 </ul>
