--- a/application/index/view/project/index.html
+++ b/application/index/view/project/index.html
@@ -71,7 +71,7 @@
 		<div class="project">
 			<!-- 标题 -->
 			<div class="project_title project_flex">
-				<div class="project_l">{:substr($now_month, 0, 4)}年{:substr($now_month, 4)}月</div>
+				<div class="project_l">{:substr($pre_month, 0, 4)}年{:substr($pre_month, 4)}月</div>
 				<a href="{:url('index/project/all')}" class="index_title_r">更多 <img class="index_img" src="/statics/images/icons/you.png"></a>
 			</div>
 
