--- a/public/statics/css/common.css
+++ b/public/statics/css/common.css
@@ -82,7 +82,10 @@ header{
 
 /*中间main*/
 .main{
-	padding: 40px 23% 10px 23%;
+	/*padding: 40px 23% 10px 23%;*/
+	padding: 40px 0 10px 0;
+	width: 900px;
+	margin: 0 auto;
 	min-height: 500px;
 }
 
