--- a/application/index/view/user/login.html
+++ b/application/index/view/user/login.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- 顶部菜单 -->
-    <!-- {include file="common/header"} -->
+    {include file="common/header"}
     <!-- 中间主要内容 -->
     <div class="main-content">
         <div class="main-con-wrap">
