--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -125,7 +125,7 @@
             <!-- 标题 -->
             <div class="index_title index_flex index_partner_container">
                 <div class="index_title_l">合作伙伴</div>
-                <a href="{:url('index/resource/exhibition')}" class="index_title_r">更多 <img class="index_img" src="/statics/images/icons/you.png"></a>
+                <a href="{:url('index/resource/partner')}" class="index_title_r">更多 <img class="index_img" src="/statics/images/icons/you.png"></a>
             </div>
             <!-- 内容 -->
             <div class="index_partner_content">
