--- a/application/index/view/study/progress.html
+++ b/application/index/view/study/progress.html
@@ -23,7 +23,7 @@
 	    <li class="active"><a href="javascript:;">研究进展</a></li>
 	</ul>
 	<!-- 中间主要内容 -->
-	<div class="study_progress main">
+	<div class="main">
 		<div class="detail_img ac"><img src="/statics/images/img/img_1020_400.png"></div>
 		<div class="study_pro_flex">
 			<div class="study_pro_l">研究进展</div>
