--- a/application/index/view/user/register.html
+++ b/application/index/view/user/register.html
@@ -19,7 +19,7 @@
     <div class="main-content">
         <div class="main-con-wrap">
             <ul class="main-con-rub">
-                <li><a href="#">会员中心</a></li>
+                <li><a href="{:url('/index/about/member')}">会员中心</a></li>
                 <li class=""><a href="#">注册账号</a></li>
             </ul>
             <div class="forget">
