--- a/application/mobile/view/common/header.html
+++ b/application/mobile/view/common/header.html
@@ -4,6 +4,6 @@
       <span class="downLoadBtn">点击下载</span>
     </div>
     <div class="flexCenter headerLogo">
-      <img src="/staticm/images/timg.jpg" alt="logo"><span class="indexOpen"></span>
+      <img src="/staticm/images/timg.jpg" alt="logo" onclick="window.location='{:url('mobile/index/index')}'"><span class="indexOpen"></span>
     </div>
 </div>
