--- a/application/mobile/view/study/knowledge_detail.html
+++ b/application/mobile/view/study/knowledge_detail.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>项目详情</title>
+  <title>详情</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <script type="text/javascript">
     document.documentElement.style.fontSize = document.documentElement.clientWidth / 375 * 100 + 'px';
@@ -28,14 +28,8 @@
         <h3 class="limitLine2">{$info.title}</h3>
         <!-- <span class="detail_date">2011-11-11</span> -->
       </div>
-      <div class="detailBtn">
-          <button class="mBtn" onclick="window.location='{:url('mobile/project/enroll',array('project_id'=>$info.id))}'">活动报名</button>
-      </div>
+      
     </div>
-    <!-- 视频 -->
-    <!-- <div class="videoWrap posiRe">
-      <video class="video positionCenter" src="" poster="" controls></video>
-    </div> -->
     <!-- 内容 -->
     <div class="detail_content">
       {$info.content}
